# Zhicheng-Xu-F110-2020

./: README.md
bagfiles/: 2020-04-06-23-26-02.bag  XU_velonly.bag  subset.bag
catkin_ws/: need4speed_vesc.bag
catkin_ws/devel/: .catkin  local_setup.sh  setup.sh
catkin_ws/devel/include/beginner_tutorials/: AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
catkin_ws/devel/include/vesc_msgs/: VescState.h  VescStateStamped.h
catkin_ws/devel/include/xu_runtime_monitoring/: AverageSpeed.h  AverageSpeedRequest.h  AverageSpeedResponse.h  speed.h
catkin_ws/devel/lib/beginner_tutorials/: add_two_ints_client  add_two_ints_server  listener  talker
catkin_ws/devel/lib/need4speed_runtime_monitoring/: need4speed_average_vesc
catkin_ws/devel/lib/pkgconfig/: beginner_tutorials.pc  need4speed_runtime_monitoring.pc  vesc_msgs.pc  xu_runtime_monitoring.pc
catkin_ws/devel/lib/xu_runtime_monitoring/: xu_average_node
catkin_ws/devel/share/beginner_tutorials/cmake/: beginner_tutorials-msg-paths.cmake  beginner_tutorialsConfig.cmake
catkin_ws/devel/share/need4speed_runtime_monitoring/cmake/: need4speed_runtime_monitoringConfig.cmake
catkin_ws/devel/share/roseus/ros/vesc_msgs/: manifest.l
catkin_ws/devel/share/vesc_msgs/cmake/: vesc_msgs-msg-extras.cmake  vesc_msgs-msg-paths.cmake  vesc_msgsConfig.cmake
catkin_ws/devel/share/xu_runtime_monitoring/cmake/: xu_runtime_monitoring-msg-extras.cmake  xu_runtime_monitoring-msg-paths.cmake  xu_runtime_monitoringConfig.cmake
catkin_ws/install/: _setup_util.py  local_setup.sh  setup.sh
catkin_ws/install/lib/pkgconfig/: beginner_tutorials.pc
catkin_ws/install/share/beginner_tutorials/: package.xml
catkin_ws/install/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
catkin_ws/src/beginner_tutorials/: CMakeLists.txt  package.xml
catkin_ws/src/need4speed_runtime_monitoring/: CMakeLists.txt  need4speed_vesc.bag  package.xml
catkin_ws/src/need4speed_runtime_monitoring/src/: talker.cpp
catkin_ws/src/xu_runtime_monitoring/: CMakeLists.txt  package.xml
catkin_ws/src/xu_runtime_monitoring/msg/: speed.msg
catkin_ws/src/xu_runtime_monitoring/src/: .talker.cpp.swp  talker.cpp
xu_gap_finding/: CMakeLists.txt  package.xml
xu_gap_finding/msg/: gaps.msg
xu_gap_finding/src/: laserscan.cpp
xu_gap_finding/xu_dynmodel/: dynamical_model_code
xu_wall_following/: CMakeLists.txt  README  package.xml
xu_wall_following/config/: params.yaml
xu_wall_following/launch/: wall_following_sim.launch
xu_wall_following/scripts/: control.py  pid_error.py  sim_connector.py
(+18 files in other folders)
